<resources>

    <string name="app_name">Safecracker</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Safecracker</string>
	<string-array name="num_spinner_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="str0">0</string>
    <string name="str3">3</string>
    <string name="str1">1</string>
    <string name="str2">2</string>
    <string name="strReset">New game</string>
    <string name="strTryAgain">Move</string>
    <string name="str4">4</string>
    <string name="str5">5</string>
    <string name="str6">6</string>
    <string name="str7">7</string>
    <string name="str8">8</string>
    <string name="str9">9</string>
    <string name="Exit">Exit</string>
    <string name="gold_coin">gold coin</string>
    <string name="silver_coin">silver coin</string>
    <string name="Intermediate">Intermediate</string>
    <string name="Beginner">Beginner</string>
    <string name="Expert">Expert</string>
    <string name="Chooselevel">Choose level</string>
    <string name="TheEnd">The end</string>
    <string name="Alert">Alert</string>
    <string name="AlertMsg">You need have different numbers.</string>
    <string name="AlertMsg2">The end game. You found right number </string>
</resources>