<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >                
                <RadioButton
		            android:id="@+id/radioButton1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="false"
		            android:text="@string/str1" />		
		        <RadioButton
		            android:id="@+id/radioButton2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/str2" />		
		        <RadioButton
		            android:id="@+id/radioButton3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/str3" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                 <RadioButton
		            android:id="@+id/radioButton4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:checked="false"
		            android:text="@string/str4" />		
		        <RadioButton
		            android:id="@+id/radioButton5"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/str5" />		
		        <RadioButton
		            android:id="@+id/radioButton6"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/str6" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/str7" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str8" />
        
                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str9" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                  <RadioButton
	                android:id="@+id/radioButton0"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_horizontal"
	                android:checked="false"
	                android:text="@string/str0" />
            </TableRow>
        </TableLayout>
</LinearLayout>