<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/ListView1"
                android:layout_width="90dp"
                android:layout_height="fill_parent"
                android:background="@drawable/ic_item_number_background"
                android:choiceMode="singleChoice"
                android:divider="#ffffff"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:scrollbars="none"
                android:scrollingCache="false" >

            </ListView>

            <ListView
                android:id="@+id/ListView2"
                android:layout_width="90dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_item_number_background"
                android:choiceMode="singleChoice"
                android:divider="#ffffff"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:scrollbars="none"
                android:scrollingCache="false" >

            </ListView>

            <ListView
                android:id="@+id/ListView3"
                android:layout_width="90dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_item_number_background"
                android:choiceMode="singleChoice"
                android:divider="#ffffff"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:scrollbars="none"
                android:scrollingCache="false" >

            </ListView>

            <ListView
                android:id="@+id/ListView4"
                android:layout_width="90dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_item_number_background"
                android:choiceMode="singleChoice"
                android:divider="#ffffff"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:scrollbars="none"
                android:scrollingCache="false" >

            </ListView>

        </LinearLayout>

        <ListView
            android:id="@+id/listViewResult"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true" >

        </ListView>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.13" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:onClick="clickReset"
                android:text="@string/strReset" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="clickTry"
                android:text="@string/strTryAgain" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:onClick="clickExit"
                android:text="@string/Exit" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
